test/core/errors/indexed_offsets_error/zs/parenthesis_in_array_expression_error.zs
package parenthesis_in_array_expression_error;

struct ParenthesisInArrayExpressionError
{
    uint32 offsets[];
offsets[(@index)]:
    string fields[];
};
